--- a/languages/lazaruside.de.po
+++ b/languages/lazaruside.de.po
@@ -10939,6 +10939,10 @@ msgstr "In einem Quellverzeichnis des Packages \"%s\"."
 msgid "In a source directory of the project. Check for duplicates."
 msgstr "In einem Quellverzeichnis des Projekts. Prüfen Sie auf Duplikate."
 
+#: lazarusidestrconsts.lisincludelfms
+msgid "Including LFM files"
+msgstr ""
+
 #: lazarusidestrconsts.lisincludepath
 msgid "include path"
 msgstr "Include-Pfad"
@@ -19597,11 +19601,11 @@ msgid "Separator"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinecolor
-msgid "Use current line color"
+msgid "Use current line color (gutter: other)"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinenumbercolor
-msgid "Use current line number color"
+msgid "Use current line number color (gutter: number)"
 msgstr ""
 
 #: lazarusidestrconsts.podaddpackageunittousessection
