--- a/languages/lazaruside.es.po
+++ b/languages/lazaruside.es.po
@@ -11184,6 +11184,10 @@ msgstr "En un directorio de fuentes del paquete \"%s\"."
 msgid "In a source directory of the project. Check for duplicates."
 msgstr "En un directorio de fuentes del proyecto. Comprobar si hay duplicados."
 
+#: lazarusidestrconsts.lisincludelfms
+msgid "Including LFM files"
+msgstr ""
+
 #: lazarusidestrconsts.lisincludepath
 msgid "include path"
 msgstr "ruta incluida"
@@ -20001,11 +20005,11 @@ msgid "Separator"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinecolor
-msgid "Use current line color"
+msgid "Use current line color (gutter: other)"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinenumbercolor
-msgid "Use current line number color"
+msgid "Use current line number color (gutter: number)"
 msgstr ""
 
 #: lazarusidestrconsts.podaddpackageunittousessection
