--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -11002,6 +11002,10 @@ msgstr "Paketin \"%s\" lähdehakemistossa."
 msgid "In a source directory of the project. Check for duplicates."
 msgstr "Projektin lähdehakemistossa. Tarkista kaksoiskappaleet."
 
+#: lazarusidestrconsts.lisincludelfms
+msgid "Including LFM files"
+msgstr ""
+
 #: lazarusidestrconsts.lisincludepath
 msgid "include path"
 msgstr "Include polku"
@@ -19679,11 +19683,11 @@ msgid "Separator"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinecolor
-msgid "Use current line color"
+msgid "Use current line color (gutter: other)"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinenumbercolor
-msgid "Use current line number color"
+msgid "Use current line number color (gutter: number)"
 msgstr ""
 
 #: lazarusidestrconsts.podaddpackageunittousessection
