--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -11422,6 +11422,10 @@ msgstr "בתיקיית המקור של החבילה  \"%s\""
 msgid "In a source directory of the project. Check for duplicates."
 msgstr "בתיקיית המקור של הפרוייקט. בדוק כפילויות."
 
+#: lazarusidestrconsts.lisincludelfms
+msgid "Including LFM files"
+msgstr ""
+
 #: lazarusidestrconsts.lisincludepath
 msgid "include path"
 msgstr "כלול נתיב"
@@ -20659,11 +20663,11 @@ msgid "Separator"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinecolor
-msgid "Use current line color"
+msgid "Use current line color (gutter: other)"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinenumbercolor
-msgid "Use current line number color"
+msgid "Use current line number color (gutter: number)"
 msgstr ""
 
 #: lazarusidestrconsts.podaddpackageunittousessection
