--- a/languages/lazaruside.ja.po
+++ b/languages/lazaruside.ja.po
@@ -11170,6 +11170,10 @@ msgstr "そのパッケージ \"%s\"のソースディレクトリ内"
 msgid "In a source directory of the project. Check for duplicates."
 msgstr "プロジェクトのソースディレクトリ内。重複をチェックせよ"
 
+#: lazarusidestrconsts.lisincludelfms
+msgid "Including LFM files"
+msgstr ""
+
 #: lazarusidestrconsts.lisincludepath
 msgid "include path"
 msgstr "パスを含むインクルードパス"
@@ -20015,11 +20019,11 @@ msgid "Separator"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinecolor
-msgid "Use current line color"
+msgid "Use current line color (gutter: other)"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinenumbercolor
-msgid "Use current line number color"
+msgid "Use current line number color (gutter: number)"
 msgstr ""
 
 #: lazarusidestrconsts.podaddpackageunittousessection
