--- a/languages/lazaruside.lt.po
+++ b/languages/lazaruside.lt.po
@@ -11173,6 +11173,10 @@ msgstr "Paketo „%s“ pirminio kodo aplanke."
 msgid "In a source directory of the project. Check for duplicates."
 msgstr "Projekto pirminio kodo aplanke. Reikia patikrinti ar nėra besidubliuojančių."
 
+#: lazarusidestrconsts.lisincludelfms
+msgid "Including LFM files"
+msgstr ""
+
 #: lazarusidestrconsts.lisincludepath
 msgid "include path"
 msgstr "kelias iki įterpinių"
@@ -20055,11 +20059,11 @@ msgid "Separator"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinecolor
-msgid "Use current line color"
+msgid "Use current line color (gutter: other)"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinenumbercolor
-msgid "Use current line number color"
+msgid "Use current line number color (gutter: number)"
 msgstr ""
 
 #: lazarusidestrconsts.podaddpackageunittousessection
