--- a/languages/lazaruside.pl.po
+++ b/languages/lazaruside.pl.po
@@ -11162,6 +11162,10 @@ msgstr "Nie można utworzyć katalogu ze źródłami \"%s\"%sdla pakietu %s."
 msgid "In a source directory of the project. Check for duplicates."
 msgstr ""
 
+#: lazarusidestrconsts.lisincludelfms
+msgid "Including LFM files"
+msgstr ""
+
 #: lazarusidestrconsts.lisincludepath
 msgid "include path"
 msgstr "ścieżka dołączanych plików"
@@ -19947,11 +19951,11 @@ msgid "Separator"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinecolor
-msgid "Use current line color"
+msgid "Use current line color (gutter: other)"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinenumbercolor
-msgid "Use current line number color"
+msgid "Use current line number color (gutter: number)"
 msgstr ""
 
 #: lazarusidestrconsts.podaddpackageunittousessection
