--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-04-16 16:15+0300\n"
+"PO-Revision-Date: 2025-05-06 16:41+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -10914,6 +10914,10 @@ msgstr "В каталоге исходного кода пакета \"%s\"."
 msgid "In a source directory of the project. Check for duplicates."
 msgstr "В каталоге исходного кода проекта. Проверьте наличие дублирующихся файлов."
 
+#: lazarusidestrconsts.lisincludelfms
+msgid "Including LFM files"
+msgstr "Обрабатывать файлы LFM"
+
 #: lazarusidestrconsts.lisincludepath
 msgid "include path"
 msgstr "пути к включаемым файлам"
@@ -19627,12 +19631,12 @@ msgid "Separator"
 msgstr "Разделитель"
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinecolor
-msgid "Use current line color"
-msgstr "Использовать цвет текущей строки"
+msgid "Use current line color (gutter: other)"
+msgstr "Использовать цвет текущей строки (боковое поле: прочее)"
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinenumbercolor
-msgid "Use current line number color"
-msgstr "Использовать цвет номера текущей строки"
+msgid "Use current line number color (gutter: number)"
+msgstr "Использовать цвет номера текущей строки (боковое поле: номер)"
 
 #: lazarusidestrconsts.podaddpackageunittousessection
 msgid "Add package unit to uses section"
