--- a/languages/lazaruside.uk.po
+++ b/languages/lazaruside.uk.po
@@ -11011,6 +11011,10 @@ msgstr "В джерельній теці пакунка \"%s\"."
 msgid "In a source directory of the project. Check for duplicates."
 msgstr "В теці сирцевих кодів проєкту. Перевірте на дублікати."
 
+#: lazarusidestrconsts.lisincludelfms
+msgid "Including LFM files"
+msgstr ""
+
 #: lazarusidestrconsts.lisincludepath
 msgid "include path"
 msgstr "шлях доданих файлів"
@@ -19757,11 +19761,11 @@ msgid "Separator"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinecolor
-msgid "Use current line color"
+msgid "Use current line color (gutter: other)"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinenumbercolor
-msgid "Use current line number color"
+msgid "Use current line number color (gutter: number)"
 msgstr ""
 
 #: lazarusidestrconsts.podaddpackageunittousessection
