--- a/languages/lazaruside.cs.po
+++ b/languages/lazaruside.cs.po
@@ -11095,6 +11095,10 @@ msgstr "Ve zdrojovém adresáři balíčku \"%s\"."
 msgid "In a source directory of the project. Check for duplicates."
 msgstr "Ve zdrojovém adresáři projektu. Ověřte duplicity."
 
+#: lazarusidestrconsts.lisincludelfms
+msgid "Including LFM files"
+msgstr ""
+
 #: lazarusidestrconsts.lisincludepath
 msgid "include path"
 msgstr "cesta zahrnutí"
@@ -19871,11 +19875,11 @@ msgid "Separator"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinecolor
-msgid "Use current line color"
+msgid "Use current line color (gutter: other)"
 msgstr ""
 
 #: lazarusidestrconsts.optdispgutterusecurrentlinenumbercolor
-msgid "Use current line number color"
+msgid "Use current line number color (gutter: number)"
 msgstr ""
 
 #: lazarusidestrconsts.podaddpackageunittousessection
