IDE, Debugger: change stack "current" caption. Issue #38655

--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.af_ZA.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.af_ZA.po
@@ -1081,7 +1081,7 @@ msgstr ""
 
 #: idedebuggerstringconstants.liscurrent
 msgctxt "idedebuggerstringconstants.liscurrent"
-msgid "Current"
+msgid "Select as context"
 msgstr ""
 
 #: idedebuggerstringconstants.lisdadattach
