--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.ar.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.ar.po
@@ -1083,7 +1083,7 @@ msgstr ""
 
 #: idedebuggerstringconstants.liscurrent
 msgctxt "idedebuggerstringconstants.liscurrent"
-msgid "Current"
+msgid "Select as context"
 msgstr ""
 
 #: idedebuggerstringconstants.lisdadattach
