--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.he.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.he.po
@@ -1105,8 +1105,10 @@ msgid "Page up"
 msgstr ""
 
 #: idedebuggerstringconstants.liscurrent
+#, fuzzy
+#| msgid "Current"
 msgctxt "lazarusidestrconsts.liscurrent"
-msgid "Current"
+msgid "Select as context"
 msgstr "נוכחי"
 
 #: idedebuggerstringconstants.lisdadattach
