--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.pt_BR.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.pt_BR.po
@@ -1126,8 +1126,10 @@ msgid "Page up"
 msgstr ""
 
 #: idedebuggerstringconstants.liscurrent
+#, fuzzy
+#| msgid "Current"
 msgctxt "lazarusidestrconsts.liscurrent"
-msgid "Current"
+msgid "Select as context"
 msgstr "Atual"
 
 #: idedebuggerstringconstants.lisdadattach
