--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.zh_CN.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.zh_CN.po
@@ -1110,8 +1110,10 @@ msgid "Page up"
 msgstr ""
 
 #: idedebuggerstringconstants.liscurrent
+#, fuzzy
+#| msgid "Current"
 msgctxt "lazarusidestrconsts.liscurrent"
-msgid "Current"
+msgid "Select as context"
 msgstr "当前"
 
 #: idedebuggerstringconstants.lisdadattach
