--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.ca.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.ca.po
@@ -1092,7 +1092,7 @@ msgstr ""
 
 #: idedebuggerstringconstants.liscurrent
 msgctxt "idedebuggerstringconstants.liscurrent"
-msgid "Current"
+msgid "Select as context"
 msgstr ""
 
 #: idedebuggerstringconstants.lisdadattach
