--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.de.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.de.po
@@ -1109,8 +1109,10 @@ msgid "Page up"
 msgstr ""
 
 #: idedebuggerstringconstants.liscurrent
+#, fuzzy
+#| msgid "Current"
 msgctxt "lazarusidestrconsts.liscurrent"
-msgid "Current"
+msgid "Select as context"
 msgstr "Aktuell"
 
 #: idedebuggerstringconstants.lisdadattach
