--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.es.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.es.po
@@ -1115,8 +1115,10 @@ msgid "Page up"
 msgstr ""
 
 #: idedebuggerstringconstants.liscurrent
+#, fuzzy
+#| msgid "Current"
 msgctxt "lazarusidestrconsts.liscurrent"
-msgid "Current"
+msgid "Select as context"
 msgstr "Actual"
 
 #: idedebuggerstringconstants.lisdadattach
