--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.fi.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.fi.po
@@ -1108,8 +1108,10 @@ msgid "Page up"
 msgstr ""
 
 #: idedebuggerstringconstants.liscurrent
+#, fuzzy
+#| msgid "Current"
 msgctxt "lazarusidestrconsts.liscurrent"
-msgid "Current"
+msgid "Select as context"
 msgstr "Nykyinen"
 
 #: idedebuggerstringconstants.lisdadattach
