--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.id.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.id.po
@@ -1094,7 +1094,7 @@ msgstr ""
 
 #: idedebuggerstringconstants.liscurrent
 msgctxt "idedebuggerstringconstants.liscurrent"
-msgid "Current"
+msgid "Select as context"
 msgstr ""
 
 #: idedebuggerstringconstants.lisdadattach
