--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.it.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.it.po
@@ -1114,8 +1114,10 @@ msgid "Page up"
 msgstr ""
 
 #: idedebuggerstringconstants.liscurrent
+#, fuzzy
+#| msgid "Current"
 msgctxt "lazarusidestrconsts.liscurrent"
-msgid "Current"
+msgid "Select as context"
 msgstr "Corrente"
 
 #: idedebuggerstringconstants.lisdadattach
