--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.tr.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.tr.po
@@ -1111,8 +1111,10 @@ msgid "Page up"
 msgstr ""
 
 #: idedebuggerstringconstants.liscurrent
+#, fuzzy
+#| msgid "Current"
 msgctxt "lazarusidestrconsts.liscurrent"
-msgid "Current"
+msgid "Select as context"
 msgstr "Geçerli"
 
 #: idedebuggerstringconstants.lisdadattach
