--- a/languages/lazaruside.af_ZA.po
+++ b/languages/lazaruside.af_ZA.po
@@ -5809,8 +5809,10 @@ msgid "&Replace"
 msgstr ""
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Bou"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6687,7 +6689,7 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+msgid "&Clean all"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -11759,7 +11761,7 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+msgid "Build &Many"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -11779,7 +11781,7 @@ msgid "Debug IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+msgid "&Defines"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -11834,7 +11836,7 @@ msgid "Optimized IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+msgid "&Options:"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -11846,7 +11848,7 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+msgid "&Profile to build"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -11858,7 +11860,7 @@ msgid "New name for profile:"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -11915,7 +11917,7 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr ""
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr ""
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -16983,7 +16985,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr ""
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Stoor voorkeure"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
