--- a/languages/lazaruside.ar.po
+++ b/languages/lazaruside.ar.po
@@ -5816,8 +5816,10 @@ msgid "&Replace"
 msgstr "أبدل"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "إبن"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6694,7 +6696,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "نضّف الكلّ"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -11772,7 +11776,7 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+msgid "Build &Many"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -11792,7 +11796,7 @@ msgid "Debug IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+msgid "&Defines"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -11847,7 +11851,7 @@ msgid "Optimized IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+msgid "&Options:"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -11859,7 +11863,7 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+msgid "&Profile to build"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -11871,7 +11875,9 @@ msgid "New name for profile:"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "أعد التّشغيل بعد بناء بيئة التّطوير المدمجة"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -11928,7 +11934,7 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr ""
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr ""
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -16939,7 +16945,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr ""
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "إحفظ الخيارات"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
