--- a/languages/lazaruside.ca.po
+++ b/languages/lazaruside.ca.po
@@ -5988,8 +5988,10 @@ msgid "&Replace"
 msgstr ""
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Munta"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6874,7 +6876,7 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Sintaxi simple (p.ex. * en lloc de .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+msgid "&Clean all"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -11997,7 +11999,7 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+msgid "Build &Many"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -12017,7 +12019,7 @@ msgid "Debug IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+msgid "&Defines"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -12072,7 +12074,9 @@ msgid "Optimized IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Opcions:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -12084,7 +12088,7 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+msgid "&Profile to build"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -12096,7 +12100,7 @@ msgid "New name for profile:"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -12155,7 +12159,7 @@ msgstr ""
 #: lazarusidestrconsts.lislclwidgettype
 #, fuzzy
 #| msgid "LCL Widget Type"
-msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "Tipus de giny LCL"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17424,7 +17428,7 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr ""
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+msgid "&Save Settings"
 msgstr ""
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
