--- a/languages/lazaruside.cs.po
+++ b/languages/lazaruside.cs.po
@@ -5909,8 +5909,10 @@ msgid "&Replace"
 msgstr "&Nahradit"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Sestavit"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6792,7 +6794,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Jednoduchá syntaxe (např. * namísto .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "Vyčistit vše"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -11941,7 +11945,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "Jste si jisti smazáním tohoto sestavovacího profilu?"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "Sestavit více"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -11961,7 +11967,9 @@ msgid "Debug IDE"
 msgstr "Ladit IDE"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "Definice"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -12016,7 +12024,9 @@ msgid "Optimized IDE"
 msgstr "Optimalizované IDE"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Nastavení:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -12028,7 +12038,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "Profil k sestavení"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -12040,7 +12052,9 @@ msgid "New name for profile:"
 msgstr "Nové jméno profilu:"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "Restartovat po sestavení IDE"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -12097,7 +12111,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "Verze Lazarusu (př. 1.2.4)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "Typ LCL Widgetu"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17199,7 +17215,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr "Ctrl+Klik na identifikátor v editoru kódu je uložen v historii skoků."
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Uložit nastavení"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
