--- a/languages/lazaruside.de.po
+++ b/languages/lazaruside.de.po
@@ -5823,8 +5823,10 @@ msgid "&Replace"
 msgstr "E&rsetzen"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Neu kompilieren"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6700,7 +6702,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Einfache Syntax (z.B. * statt .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "Alle aufräumen"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -11768,7 +11772,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "Wollen sie dieses Erstellprofil wirklich löschen?"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "Viele erstellen"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -11788,7 +11794,9 @@ msgid "Debug IDE"
 msgstr "IDE mit Debugger-Informationen"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "Definitionen"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -11843,7 +11851,9 @@ msgid "Optimized IDE"
 msgstr "Optimierte IDE"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Einstellungen:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -11855,7 +11865,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "Profil zum Kompilieren"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -11867,7 +11879,9 @@ msgid "New name for profile:"
 msgstr "Neuer Name für Profil:"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "Nach dem Kompilieren neu starten"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -11924,7 +11938,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "Lazarus Version (z.B. 1.2.4)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "LCL-Schnittstelle"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -16936,7 +16952,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr "Strg-Klick auf einen Bezeichner im Code-Editor wird in der Sprungliste gesichert."
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Einstellungen sichern"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
