--- a/languages/lazaruside.es.po
+++ b/languages/lazaruside.es.po
@@ -5989,8 +5989,10 @@ msgid "&Replace"
 msgstr "&Reemplazar"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Construir"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6871,7 +6873,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Sintaxis simple (e.j. * en vez de .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "Limpiar todo"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -12067,7 +12071,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "¿Esta seguro de querer borrar este perfil de construcción?"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "Construir Muchas"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -12087,7 +12093,9 @@ msgid "Debug IDE"
 msgstr "IDE Depurador"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "Defines"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -12142,7 +12150,9 @@ msgid "Optimized IDE"
 msgstr "IDE Optimizado"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Opciones:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -12154,7 +12164,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "Perfil de construcción"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -12166,7 +12178,9 @@ msgid "New name for profile:"
 msgstr "Nombre nuevo para el perfil:"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "Reiniciar después de construir el IDE"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -12223,7 +12237,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "Versión de Lazarus (e.g. 1.2.4)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "Tipo de Widget LCL"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17311,7 +17327,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr "Hacer Ctrl-Clic en un identificador en el editor de código hace que guarde en el historial de saltos."
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Guardar opciones"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
