--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -5861,8 +5861,10 @@ msgid "&Replace"
 msgstr "&Korvaa"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Kokoa"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6740,7 +6742,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Yksinkertainen kielioppi (kuten * eikä .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "Siivoa kaikki"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -11846,7 +11850,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "Tahdotko varmasti poistaa tämän koontaprofiilin?"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "Kokoa monta"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -11866,7 +11872,9 @@ msgid "Debug IDE"
 msgstr "Virheenjäljitys-IDE"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "Määritteet"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -11921,7 +11929,9 @@ msgid "Optimized IDE"
 msgstr "Optimoitu IDE"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Asetukset:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -11933,7 +11943,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "Koottava profiili"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -11945,7 +11957,9 @@ msgid "New name for profile:"
 msgstr "Profiilin uusi nimi:"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "Käynnistä uudelleen kokoamisen jälkeen"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -11998,7 +12012,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "Lazarus Versio (esim. 1.2.4)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "LCL-käyttöliittymäkirjasto"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17010,7 +17026,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr "Ctrl-Click tunnisteen päällä koodieditorissa tallentuu hyppyhistoriaan."
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Tallenna asetukset"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
