--- a/languages/lazaruside.fr.po
+++ b/languages/lazaruside.fr.po
@@ -5826,8 +5826,10 @@ msgid "&Replace"
 msgstr "&Remplacer"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Créer"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6703,7 +6705,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Syntaxe simplifiée (par exemple * au lieu de .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "Tout nettoyer"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -11807,7 +11811,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "Êtes-vous sûr de vouloir supprimer ce profil de construction ?"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "Créer plusieurs modes"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -11827,7 +11833,9 @@ msgid "Debug IDE"
 msgstr "Débogage de l'EDI"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "Définitions"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -11882,7 +11890,9 @@ msgid "Optimized IDE"
 msgstr "EDI optimisé"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Options :"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -11894,7 +11904,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr "lazbuild [options] <nom de fichier du projet/paquet ou nom du paquet>"
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "Profil à créer"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -11906,7 +11918,9 @@ msgid "New name for profile:"
 msgstr "Nouveau nom du profil :"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "Redémarrer après la création de l'EDI"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -11963,7 +11977,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "Version de Lazarus (par exemple : 1.2.4)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "Type de composant graphique LCL"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17002,7 +17018,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr "Le Ctrl-Clic sur un identificateur dans l'éditeur de code est stocké dans l'historique de saut."
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Enregistrer les paramètres"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
