--- a/languages/lazaruside.id.po
+++ b/languages/lazaruside.id.po
@@ -6020,8 +6020,10 @@ msgid "&Replace"
 msgstr ""
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Bangun"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6912,7 +6914,7 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Sintaks Sederhana (contoh. * instead of .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+msgid "&Clean all"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -12112,7 +12114,7 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+msgid "Build &Many"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -12132,7 +12134,7 @@ msgid "Debug IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+msgid "&Defines"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -12187,7 +12189,9 @@ msgid "Optimized IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Opsi:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -12199,7 +12203,7 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+msgid "&Profile to build"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -12211,7 +12215,7 @@ msgid "New name for profile:"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -12270,7 +12274,7 @@ msgstr ""
 #: lazarusidestrconsts.lislclwidgettype
 #, fuzzy
 #| msgid "LCL Widget Type"
-msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "Tipe Widget LCL"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17585,7 +17589,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr ""
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Simpan Seting"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
