--- a/languages/lazaruside.it.po
+++ b/languages/lazaruside.it.po
@@ -5988,8 +5988,10 @@ msgid "&Replace"
 msgstr "&Sostituisci"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Costruisci"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6873,7 +6875,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Sintassi semplice (cioè * invece di .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "Pulisci tutto"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -12061,7 +12065,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "vuoi davvero cancellare questo profilo di costruzione?"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "Costruire Molti"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -12081,7 +12087,9 @@ msgid "Debug IDE"
 msgstr "IDE di Debug"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "Define"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -12136,7 +12144,9 @@ msgid "Optimized IDE"
 msgstr "IDE ottimizzata"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Opzioni:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -12148,7 +12158,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "Profilo da costruire"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -12160,7 +12172,9 @@ msgid "New name for profile:"
 msgstr "Nuovo nome per il profilo:"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "Rilancia l'IDE dopo averla costruita"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -12217,7 +12231,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "Versione di Lazarus (p.es. 1.2.4)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "Tipo di widget LCL"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17330,7 +17346,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr "Il Ctrl-Click su un identificatore nell'editor è salvato nello storico dei salti."
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Salva le impostazioni"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
