--- a/languages/lazaruside.ja.po
+++ b/languages/lazaruside.ja.po
@@ -5977,8 +5977,10 @@ msgid "&Replace"
 msgstr "置換(&R)"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "構築"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6861,7 +6863,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "簡単な表記法 (例 * instead of .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "すべて掃除"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -12021,7 +12025,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "本当にこの構築プロファイルを削除してもよろしいですか？"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "多くを構築"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -12041,7 +12047,9 @@ msgid "Debug IDE"
 msgstr "IDEをデバッグ"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "定義"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -12096,7 +12104,9 @@ msgid "Optimized IDE"
 msgstr "最適化されたIDE"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "オプション"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -12108,7 +12118,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "プロファイルを構築"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -12120,7 +12132,9 @@ msgid "New name for profile:"
 msgstr "プロファイルの新しい名称"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "IDEを構築した後に再起動"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -12177,7 +12191,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "Lazarusバージョン(例：1.2.4)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "LCLウィジェットタイプ"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17318,7 +17334,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr "　コードエディタ内の識別子へのCtrl-クリックが移動履歴に保管されています。"
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "設定を保存"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
