--- a/languages/lazaruside.lt.po
+++ b/languages/lazaruside.lt.po
@@ -5982,8 +5982,10 @@ msgid "&Replace"
 msgstr "&Pakeisti"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Daryti"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6865,7 +6867,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Paprasta sintaksė (pvz.: * vietoje .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "Visiškas apvalymas"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -12049,7 +12053,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "Ar iš tikro pašalinti šį darymo profilį?"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "Daryti daugelį"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -12069,7 +12075,9 @@ msgid "Debug IDE"
 msgstr "Derinama IKA"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "Apibrėžtys"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -12124,7 +12132,9 @@ msgid "Optimized IDE"
 msgstr "Optimizuota IKA"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Parinktys:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -12136,7 +12146,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "Daromas profilis"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -12148,7 +12160,9 @@ msgid "New name for profile:"
 msgstr "Naujas profilio pavadinimas:"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "Padarius IKA, startuoti iš naujo"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -12205,7 +12219,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "„Lazarus“ laida (pvz. 1.6.4)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "LCL valdiklių tipas"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17358,7 +17374,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr "Identifikatorius, kuris buvo spustelėtas pele tuo pat mentu nuspadųs klavišą „Ctrl“, bus įtrauktas į peršokimų istoriją."
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Įrašyti nuostatas"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
