--- a/languages/lazaruside.nl.po
+++ b/languages/lazaruside.nl.po
@@ -6005,8 +6005,10 @@ msgid "&Replace"
 msgstr ""
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Bouw"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6891,7 +6893,7 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Eenvoudige syntax (* i.p.v. .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+msgid "&Clean all"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -12044,7 +12046,7 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+msgid "Build &Many"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -12064,7 +12066,7 @@ msgid "Debug IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+msgid "&Defines"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -12119,7 +12121,9 @@ msgid "Optimized IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Opties:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -12131,7 +12135,7 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+msgid "&Profile to build"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -12143,7 +12147,7 @@ msgid "New name for profile:"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -12202,7 +12206,7 @@ msgstr ""
 #: lazarusidestrconsts.lislclwidgettype
 #, fuzzy
 #| msgid "LCL Widget Type"
-msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "LCL Widget Type"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17487,7 +17491,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr ""
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Sla instelling op"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
