--- a/languages/lazaruside.pl.po
+++ b/languages/lazaruside.pl.po
@@ -5972,8 +5972,10 @@ msgid "&Replace"
 msgstr "Zamień"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Buduj"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6860,7 +6862,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Uproszczona składnia (np. * zamiast .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "Wyczyść wszystko"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -12019,7 +12023,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "Na pewno chcesz skasować ten profil budowania?"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "Buduj wiele"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -12039,7 +12045,9 @@ msgid "Debug IDE"
 msgstr "IDE Odpluskwiania"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "Symbole"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -12095,7 +12103,9 @@ msgid "Optimized IDE"
 msgstr "Zoptymalizowane IDE"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Opcje:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -12107,7 +12117,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "Profil budowania"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -12119,7 +12131,9 @@ msgid "New name for profile:"
 msgstr "Nowa nazwa profilu:"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "Uruchom ponownie po zbudowaniu IDE"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -12176,7 +12190,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "Wersja Lazarusa (np. 1.6.0)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "Typ widżetu LCL"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17256,7 +17272,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr ""
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Zapisz ustawienia"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
