--- a/languages/lazaruside.pot
+++ b/languages/lazaruside.pot
@@ -5784,7 +5784,7 @@ msgstr ""
 
 #: lazarusidestrconsts.lisbuild
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr ""
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6659,7 +6659,7 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+msgid "&Clean all"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -11715,7 +11715,7 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+msgid "Build &Many"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -11735,7 +11735,7 @@ msgid "Debug IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+msgid "&Defines"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -11790,7 +11790,7 @@ msgid "Optimized IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+msgid "&Options:"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -11802,7 +11802,7 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+msgid "&Profile to build"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -11814,7 +11814,7 @@ msgid "New name for profile:"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -11871,7 +11871,7 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr ""
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr ""
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -16851,7 +16851,7 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr ""
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+msgid "&Save Settings"
 msgstr ""
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
