--- a/languages/lazaruside.pt_BR.po
+++ b/languages/lazaruside.pt_BR.po
@@ -5889,8 +5889,10 @@ msgid "&Replace"
 msgstr "&Substituir"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Construir"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6776,7 +6778,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Sintaxe Simples (ex: * em vez de .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "Limpar tudo"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -11922,7 +11926,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "Confirma a exclusão deste perfil de construção ?"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "Construir muitos"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -11942,7 +11948,9 @@ msgid "Debug IDE"
 msgstr "Depurar IDE"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "Definições"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -11997,7 +12005,9 @@ msgid "Optimized IDE"
 msgstr "IDE Otimizada"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Opções:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -12009,7 +12019,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "Perfil à construir"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -12021,7 +12033,9 @@ msgid "New name for profile:"
 msgstr "Novo nome para perfil:"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "Reiniciar após construir IDE"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -12078,7 +12092,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "Versão Lazarus (ex. 1.2.4)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "Tipo \"widget\" LCL"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17142,7 +17158,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr "Ctrl-Clique em um identificador no editor de código é armazenado no histórico de saltos."
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Salvar Configurações"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
