--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-05-06 16:41+0300\n"
+"PO-Revision-Date: 2025-05-15 15:40+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -5804,8 +5804,8 @@ msgstr "&Заменить"
 
 #: lazarusidestrconsts.lisbuild
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
-msgstr "Собрать"
+msgid "&Build"
+msgstr "Со&брать"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
 msgid "Build all files of project/package/IDE."
@@ -6679,8 +6679,8 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Простой синтаксис (например, * вместо .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
-msgstr "Очищать всё"
+msgid "&Clean all"
+msgstr "Очищать &всё"
 
 #: lazarusidestrconsts.liscleanlazarussource
 msgid "Clean Lazarus Source"
@@ -11771,8 +11771,8 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "Вы действительно хотите удалить этот профиль сборки?"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
-msgstr "Собрать несколько"
+msgid "Build &Many"
+msgstr "Собрать &несколько"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
 msgid "Common Settings"
@@ -11791,8 +11791,8 @@ msgid "Debug IDE"
 msgstr "IDE в режиме отладки"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
-msgstr "Определения"
+msgid "&Defines"
+msgstr "О&пределения"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
 msgid "Defines without -d"
@@ -11846,8 +11846,8 @@ msgid "Optimized IDE"
 msgstr "IDE с оптимизацией"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
-msgstr "Параметры:"
+msgid "&Options:"
+msgstr "П&араметры:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
 msgid "Options passed to compiler"
@@ -11858,8 +11858,8 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr "lazbuild [параметры] <имя файла проекта/пакета либо имя пакета>"
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
-msgstr "Профиль сборки"
+msgid "&Profile to build"
+msgstr "Про&филь сборки"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
 msgid "Rename Profile"
@@ -11870,8 +11870,8 @@ msgid "New name for profile:"
 msgstr "Новое имя профиля:"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
-msgstr "Перезапускать после сборки IDE"
+msgid "&Restart after building IDE"
+msgstr "П&ерезапускать после сборки IDE"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
 msgctxt "lazarusidestrconsts.lislazbuildrestartlazarusautomatically"
@@ -11927,8 +11927,8 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "Версия Lazarus (например, 1.2.4)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
-msgstr "Библиотека виджетов LCL"
+msgid "LCL &widget type"
+msgstr "Библиотека вид&жетов LCL"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
 msgid "Add link to inherited"
@@ -16970,8 +16970,8 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr "Щелчок при нажатой клавише Ctrl по идентификатору в редакторе исходного кода сохраняется в истории переходов"
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
-msgstr "Сохранить параметры"
+msgid "&Save Settings"
+msgstr "Со&хранить параметры"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
 msgid "Save Shown Messages to File ..."
