--- a/languages/lazaruside.sk.po
+++ b/languages/lazaruside.sk.po
@@ -5863,8 +5863,10 @@ msgid "&Replace"
 msgstr "Na&hradiť"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Vybudovať"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6750,7 +6752,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Jednoduchá syntax (napr. * namiesto .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "Vyčistiť všetko"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -11853,7 +11857,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "Vybudovať viac"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -11873,7 +11879,9 @@ msgid "Debug IDE"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "Definície"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -11928,7 +11936,9 @@ msgid "Optimized IDE"
 msgstr "Optimalizované IDE"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Voľby:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -11940,7 +11950,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "Profil na vybudovanie"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -11952,7 +11964,9 @@ msgid "New name for profile:"
 msgstr "Nové meno pre profil:"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "Reštartovať po vybudovaní IDE"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -12009,7 +12023,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr ""
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "Typ LCL Widgetu"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17077,7 +17093,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr ""
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Uložiť nastavenia"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
