--- a/languages/lazaruside.tr.po
+++ b/languages/lazaruside.tr.po
@@ -5801,8 +5801,10 @@ msgid "&Replace"
 msgstr "&Değiştir"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Derle"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6682,7 +6684,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Basit Sözdizimi (ör. *. * Yerine)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "Hepsini temizle"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -11783,7 +11787,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "Bu yapı profilini silmek istediğinizden emin misiniz?"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "Birçok inşa"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -11803,7 +11809,9 @@ msgid "Debug IDE"
 msgstr "IDE hata ayıklama"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "Tanımlar"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -11857,7 +11865,9 @@ msgid "Optimized IDE"
 msgstr "İyileştirilmiş IDE"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Seçenekler:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -11869,7 +11879,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr "lazbuild [options] <proje/paket dosya adı veya paket adı>"
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "Profile göre derle"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -11881,7 +11893,9 @@ msgid "New name for profile:"
 msgstr "Profilin yeni adı:"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "IDE kurduktan sonra yeniden başlatın"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -11934,7 +11948,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "Lazarus Sürümü (ör. 1.2.4)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "LCL widget türü"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -16934,7 +16950,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr "Kod düzenleyicisinde bir tanımlayıcıya Ctrl-tıklama atlama geçmişinde saklanır."
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Ayarları kaydet"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
