--- a/languages/lazaruside.uk.po
+++ b/languages/lazaruside.uk.po
@@ -5856,8 +5856,10 @@ msgid "&Replace"
 msgstr "За&мінити"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "Зібрати"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6739,7 +6741,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "Простий синтаксис (напр., * замість .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "Очистити все"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -11879,7 +11883,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "Ви точно хочете видалити цей профіль збирання?"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "Зібрати багато"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -11899,7 +11905,9 @@ msgid "Debug IDE"
 msgstr "Зневадження ІСР"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "Визначення"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -11954,7 +11962,9 @@ msgid "Optimized IDE"
 msgstr "Оптимізований ІСР"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "Параметри:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -11966,7 +11976,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "Профіль для збирання"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -11978,7 +11990,9 @@ msgid "New name for profile:"
 msgstr "Нова назва для профілю:"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "Перезапустити після збирання ІСР"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -12035,7 +12049,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "Версія Lazarus (наприклад, 1.2.4)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "Тип LCL widget"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -17085,7 +17101,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr "Клацання з Ctrl на ідентифікаторі у Редакторі коду зберігається в історії переходів."
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "Зберегти налаштування"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
