--- a/languages/lazaruside.zh_CN.po
+++ b/languages/lazaruside.zh_CN.po
@@ -5820,8 +5820,10 @@ msgid "&Replace"
 msgstr "替换(&R)"
 
 #: lazarusidestrconsts.lisbuild
+#, fuzzy
+#| msgid "Build"
 msgctxt "lazarusidestrconsts.lisbuild"
-msgid "Build"
+msgid "&Build"
 msgstr "构建"
 
 #: lazarusidestrconsts.lisbuildallfilesofprojectpackageide
@@ -6701,7 +6703,9 @@ msgid "Simple Syntax (e.g. * instead of .*)"
 msgstr "简单语法 (例如 * 取代 .*)"
 
 #: lazarusidestrconsts.liscleanall
-msgid "Clean all"
+#, fuzzy
+#| msgid "Clean all"
+msgid "&Clean all"
 msgstr "清理所有"
 
 #: lazarusidestrconsts.liscleanlazarussource
@@ -11795,7 +11799,9 @@ msgid "Are you sure you want to delete this build profile?"
 msgstr "你真的想删除这个构建profile?"
 
 #: lazarusidestrconsts.lislazbuildbuildmany
-msgid "Build Many"
+#, fuzzy
+#| msgid "Build Many"
+msgid "Build &Many"
 msgstr "构建多种"
 
 #: lazarusidestrconsts.lislazbuildcommonsettings
@@ -11815,7 +11821,9 @@ msgid "Debug IDE"
 msgstr "调试IDE"
 
 #: lazarusidestrconsts.lislazbuilddefines
-msgid "Defines"
+#, fuzzy
+#| msgid "Defines"
+msgid "&Defines"
 msgstr "定义"
 
 #: lazarusidestrconsts.lislazbuilddefineswithoutd
@@ -11870,7 +11878,9 @@ msgid "Optimized IDE"
 msgstr "优化IDE"
 
 #: lazarusidestrconsts.lislazbuildoptions
-msgid "Options:"
+#, fuzzy
+#| msgid "Options:"
+msgid "&Options:"
 msgstr "选项:"
 
 #: lazarusidestrconsts.lislazbuildoptionspassedtocompiler
@@ -11882,7 +11892,9 @@ msgid "lazbuild [options] <project/package filename or package name>"
 msgstr ""
 
 #: lazarusidestrconsts.lislazbuildprofile
-msgid "Profile to build"
+#, fuzzy
+#| msgid "Profile to build"
+msgid "&Profile to build"
 msgstr "Profile来构建"
 
 #: lazarusidestrconsts.lislazbuildrenameprof
@@ -11894,7 +11906,9 @@ msgid "New name for profile:"
 msgstr "新建名称对于profile:"
 
 #: lazarusidestrconsts.lislazbuildrestartafterbuild
-msgid "Restart after building IDE"
+#, fuzzy
+#| msgid "Restart after building IDE"
+msgid "&Restart after building IDE"
 msgstr "构建IDE后重新开始"
 
 #: lazarusidestrconsts.lislazbuildrestartlazarusautomatically
@@ -11951,7 +11965,9 @@ msgid "Lazarus Version (e.g. 1.2.4)"
 msgstr "Lazarus版本(例如1.2.4)"
 
 #: lazarusidestrconsts.lislclwidgettype
-msgid "LCL widget type"
+#, fuzzy
+#| msgid "LCL widget type"
+msgid "LCL &widget type"
 msgstr "LCL widget类型"
 
 #: lazarusidestrconsts.lisldaddlinktoinherited
@@ -16971,7 +16987,9 @@ msgid "Ctrl-Click on an identifier in code editor is stored in jump history."
 msgstr ""
 
 #: lazarusidestrconsts.lissavesettings
-msgid "Save Settings"
+#, fuzzy
+#| msgid "Save Settings"
+msgid "&Save Settings"
 msgstr "保存设置"
 
 #: lazarusidestrconsts.lissaveshownmessagestofile
